bgo#738367 - Fix handling of V/v/H/h commands in path

These were not setting one of the x/y components for the reflection point
to be used in smooth curves.

https://bugzilla.gnome.org/show_bug.cgi?id=738367